--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
     "element-plus": "^2.2.16",
+    "firebase": "^9.10.0",
     "highlight.js": "^11.6.0",
     "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
