--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^9.10.0",
     "highlight.js": "^11.6.0",
     "js-cookie": "^3.0.1",
+    "marked": "^4.1.0",
     "mockjs": "^1.1.0",
     "path": "^0.12.7",
     "path-to-regexp": "^6.2.1",
